Preventing full width buttons in narrow viewports
Was causing the layout to look weird

--- a/jssynth.css
+++ b/jssynth.css
@@ -414,8 +414,4 @@ button {
   .indented {
     padding-left: 0;
   }
-
-  button {
-    width: 100%;
-  }
 }
